--- a/src/main/resources/app/src/app/file/file.component.html
+++ b/src/main/resources/app/src/app/file/file.component.html
@@ -33,6 +33,10 @@
           <div *ngFor="let tag of file.tags">
             <span class="badge badge-secondary">{{ tag.name }}</span>
           </div>
+
+          <input id="typeahead-focus" type="text" class="form-control" [(ngModel)]="model" [ngbTypeahead]="search"
+            (focus)="focus$.next($any($event).target.value)" (click)="click$.next($any($event).target.value)"
+            #instance="ngbTypeahead" />
         </dd>
       </dl>
     </div>
