--- a/frontend/src/app/audit/audit-detail/audit-detail.component.html
+++ b/frontend/src/app/audit/audit-detail/audit-detail.component.html
@@ -1,30 +1,46 @@
 <ng-container *ngIf="audit">
-  <div class="card">
-    <div class="card-body">
-      <form>
-        <fieldset disabled>
-          <div class="mb-3">
-            <label for="filepath" class="form-label">Filepath</label>
-            <div class="col-sm-10">
 
-              <input type="text" id="filepath" class="form-control" placeholder="{{ audit.filePath }}">
-            </div>
-          </div>
-          <div class="mb-3">
-            <label for="status" class="form-label">Status</label>
-            <div class="col-sm-10">
-              <input type="text" id="status" class="form-control" placeholder="{{ audit.status }}">
-            </div>
-          </div>
-        </fieldset>
-      </form>
-
-      <div class="card-header">
-        Match(es)
+  <div class="mt-4">
+    <div class="row">
+      <div class="col-md-8">
+        <h6 class="font-14">Filepath:</h6>
+        <p class="text-sm lh-150">{{ audit.filePath }}</p>
       </div>
-      <ul *ngFor="let m of audit.matches" class="list-group list-group-flush">
-        <li class="list-group-item">{{ m.score }}</li>
-      </ul>
+      <div class="col-md">
+        <h6 class="font-14">Status:</h6>
+        <p class="text-sm lh-150">{{ audit.status }}</p>
+      </div>
     </div>
   </div>
+
+
+  <div class="mt-4">
+    <div class="row">
+      <div class="col-md-8">
+        <h6 class="font-14">
+          Rule
+        </h6>
+      </div>
+      <div class="col-md">
+        <h6 class="font-14">
+          Score
+        </h6>
+      </div>
+    </div>
+
+    <div *ngFor="let m of audit.matches">
+      <div class="row">
+        <div class="col-md-8">
+          {{ m.rule.name }}
+        </div>
+        <div class="col-md">
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped" role="progressbar" [style.width]="m.score+'%'"
+              [attr.aria-valuenow]="m.score" aria-valuemin="0" aria-valuemax="100">{{ m.score }} %</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </ng-container>
