--- a/frontend/src/app/rule/rule-list/rule-list.component.html
+++ b/frontend/src/app/rule/rule-list/rule-list.component.html
@@ -1,5 +1,7 @@
 <h2>Rules</h2>
 
+<a [routerLink]="['/rule-add']">Add</a>
+
 <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
   <thead>
     <tr>
