!!! styling and form validation

--- a/frontend/src/app/audit/audit-list/audit-list.component.html
+++ b/frontend/src/app/audit/audit-list/audit-list.component.html
@@ -1,6 +1,6 @@
 <h2>Audit</h2>
 
-<table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover">
+<table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-hover">
   <thead>
     <tr>
       <th>PDF</th>
