--- a/frontend/src/app/rule/rule-add/rule-add.component.html
+++ b/frontend/src/app/rule/rule-add/rule-add.component.html
@@ -1,13 +1,13 @@
-<form [formGroup]="addForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="form" (ngSubmit)="onSubmit()" ngNativeValidate>
 
   <div class="mt-4">
     <label for="name" class="form-label">Name</label>
-    <input type="text" class="form-control" id="name" formControlName="name">
+    <input type="text" class="form-control" formControlName="name" required>
   </div>
 
   <div class="mt-4">
     <label for="targetPath" class="form-label">Target Path</label>
-    <input type="text" class="form-control" id="targetPath" formControlName="targetPath" aria-describedby="targetPathHelp">
+    <input type="text" class="form-control" formControlName="targetPath" aria-describedby="targetPathHelp" required>
     <div id="targetPathHelp" class="form-text">Relative path to target folder.</div>
   </div>
 
